// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > calls onBlur when the textarea loses focus 1`] = `
<div>
  <label
    class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_c_"
  />
  <textarea
    aria-invalid="false"
    autocomplete="off"
    class="ds:block ds:w-full ds:sm:max-w-input-long ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:px-5 ds:py-3 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md ds:min-h-[88px]"
    data-testid="ta5"
    id="_r_c_"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > calls onChange when the value changes 1`] = `
<div>
  <label
    class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_9_"
  />
  <textarea
    aria-invalid="false"
    autocomplete="off"
    class="ds:block ds:w-full ds:sm:max-w-input-long ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:px-5 ds:py-3 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md ds:min-h-[88px]"
    data-testid="ta4"
    id="_r_9_"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > displays help text when provided 1`] = `
<div>
  <label
    class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_f_"
  />
  <textarea
    aria-describedby="_r_g_"
    aria-invalid="false"
    autocomplete="off"
    class="ds:block ds:w-full ds:sm:max-w-input-long ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:px-5 ds:py-3 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md ds:min-h-[88px]"
    data-testid="ta6"
    id="_r_f_"
    placeholder="Enter text"
  />
  <div
    class="ds:mt-2 ds:block ds:text-help ds:text-secondary-gray ds:font-arial"
    data-testid="ta6-help"
    id="_r_g_"
  >
    Help text
  </div>
</div>
`;

exports[`Textarea > displays the label when hideLabel is false 1`] = `
<div>
  <label
    class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_3_"
  >
    Test Label
  </label>
  <textarea
    aria-invalid="false"
    autocomplete="off"
    class="ds:block ds:w-full ds:sm:max-w-input-long ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:px-5 ds:py-3 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md ds:min-h-[88px]"
    data-testid="ta2"
    id="_r_3_"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > hides the label when hideLabel is true 1`] = `
<div>
  <label
    class="ds:hidden ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_6_"
  />
  <textarea
    aria-invalid="false"
    autocomplete="off"
    class="ds:block ds:w-full ds:sm:max-w-input-long ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:px-5 ds:py-3 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md ds:min-h-[88px]"
    data-testid="ta3"
    id="_r_6_"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > renders without crashing 1`] = `
<div>
  <label
    class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_0_"
  />
  <textarea
    aria-invalid="false"
    autocomplete="off"
    class="ds:block ds:w-full ds:sm:max-w-input-long ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:px-5 ds:py-3 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md ds:min-h-[88px]"
    data-testid="ta1"
    id="_r_0_"
    placeholder="Enter text"
  />
</div>
`;

exports[`Textarea > sets the correct number of rows 1`] = `
<div>
  <label
    class="ds:inline-block ds:mb-3 ds:align-top ds:text-form-label ds:font-arial ds:text-primary-gray"
    for="_r_i_"
  />
  <textarea
    aria-invalid="false"
    autocomplete="off"
    class="ds:block ds:w-full ds:sm:max-w-input-long ds:rounded ds:border-2 ds:border-border-form ds:bg-white ds:px-5 ds:py-3 ds:text-primary-gray ds:focus:outline-2 ds:focus:outline-accent ds:placeholder:text-secondary-gray ds:font-arial ds:text-body-md ds:min-h-[88px]"
    data-testid="ta7"
    id="_r_i_"
    placeholder="Enter text"
    rows="5"
  />
</div>
`;
